Maquetacion pantalla mis órdenes

--- a/misOrdenes.html
+++ b/misOrdenes.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="./misOrdenes.css">
 </head>
 <body>
-    <div class="my-order">
-        <div class="my-order-container">
+    <main class="my-order">
+        <section class="my-order-container">
             <h1 class="title">My orders</h1>
 
             <div class="my-order-content">
@@ -71,7 +71,7 @@
                 </div>
             </div>
 
-        </div>
-    </div>
+        </section>
+    </main>
 </body>
 </html>
