--- a/misOrdenes.html
+++ b/misOrdenes.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <main class="my-order">
-        <section class="my-order-container">
+        <div class="my-order-container">
             <h1 class="title">My orders</h1>
 
             <div class="my-order-content">
@@ -71,7 +71,7 @@
                 </div>
             </div>
 
-        </section>
+        </div>
     </main>
 </body>
 </html>
