--- a/index.html
+++ b/index.html
@@ -63,8 +63,99 @@
                 </li>
             </ul>
         </div>
+
+        <div class="mobile-menu inactive">
+            <ul>
+                <li>
+                    <a href="">CATEGORIES</a>
+                </li>
+                <li>
+                    <a href="">All</a>
+                </li>
+                <li>
+                    <a href="">Clothes</a>
+                </li>
+                <li>
+                    <a href="">Electronics</a>
+                </li>
+                <li>
+                    <a href="">Furnitures</a>
+                </li>
+                <li>
+                    <a href="">Toys</a>
+                </li>
+                <li>
+                    <a href="">Others</a>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="">My orders</a>
+                </li>
+                <li>
+                    <a href="">My account</a>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="" class="email">platzi@example.com</a>
+                </li>
+                <li>
+                    <a href="" class="sign-out">Sign out</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 </header>
+<aside class="product-detail inactive">
+    <div class="title-container">
+        <img src="./icons/flechita.svg" alt="arrow">
+        <p class="title">My order</p>
+    </div>
+
+    <div class="my-order-content">
+        <div class="shopping-cart">
+            <figure>
+                <img src="https://images.pexels.com/photos/276517/pexels-photo-276517.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="bike">
+            </figure>
+                <p>Bike</p>
+                <p>$30,00</p>
+                <img src="./icons/icon_close.png" alt="close">
+        </div>
+
+    <div class="shopping-cart">
+        <figure>
+            <img src="https://images.pexels.com/photos/7499746/pexels-photo-7499746.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="bike">
+        </figure>
+            <p>Bike</p>
+            <p>$30,00</p>
+            <img src="./icons/icon_close.png" alt="close">
+    </div>
+
+    <div class="shopping-cart">
+        <figure>
+            <img src="https://images.pexels.com/photos/3370153/pexels-photo-3370153.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="bike">
+        </figure>
+            <p>Bike</p>
+            <p>$30,00</p>
+            <img src="./icons/icon_close.png" alt="close">
+    </div>
+
+    <div class="order">
+        <p>
+            <span>Total</span>
+        </p>
+        <p>$560.00</p>
+    </div>
+
+    <button class="primary-button">
+        Checkout
+    </button>
+    </div>
+</div>
+</aside>
 
 <script src="./main.js"></script>
 </body>
